
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned long long save_registry_every_entries; int persons_expiration; size_t max_url_length; size_t max_name_length; void* enabled; int registry_urls_root_index; void* machines; void* persons; int lock; scalar_t__ machines_urls_memory; scalar_t__ persons_urls_memory; scalar_t__ urls_memory; scalar_t__ machines_memory; scalar_t__ persons_memory; scalar_t__ machines_urls_count; scalar_t__ persons_urls_count; scalar_t__ urls_count; scalar_t__ usages_count; scalar_t__ machines_count; scalar_t__ persons_count; void* registry_to_announce; void* hostname; void* cloud_base_url; void* verify_cookies_redirects; void* registry_domain; void* log_filename; void* pathname; void* db_filename; void* machine_guid_filename; } ;


 int CONFIG_SECTION_CLOUD ;
 int CONFIG_SECTION_REGISTRY ;
 int DICTIONARY_FLAGS ;
 scalar_t__ EEXIST ;
 int FILENAME_MAX ;
 scalar_t__ WEB_SERVER_MODE_NONE ;
 int avl_init (int *,int ) ;
 void* config_get (int ,char*,char*) ;
 void* config_get_boolean (int ,char*,int) ;
 int config_get_number (int ,char*,int) ;
 int config_set_boolean (int ,char*,int ) ;
 int config_set_number (int ,char*,long long) ;
 void* dictionary_create (int ) ;
 scalar_t__ errno ;
 int fatal (char*,void*) ;
 int info (char*) ;
 int mkdir (void*,int) ;
 char* netdata_configured_hostname ;
 void* netdata_configured_varlib_dir ;
 int netdata_mutex_init (int *) ;
 TYPE_1__ registry ;
 int registry_db_load () ;
 int registry_db_save () ;
 int registry_db_should_be_saved () ;
 int registry_log_load () ;
 int registry_log_open () ;
 int registry_url_compare ;
 int setenv (char*,void*,int) ;
 int snprintfz (char*,int ,char*,void*) ;
 scalar_t__ unlikely (int ) ;
 scalar_t__ web_server_mode ;

int registry_init(void) {
    char filename[FILENAME_MAX + 1];


    if(web_server_mode != WEB_SERVER_MODE_NONE) {
        registry.enabled = config_get_boolean(CONFIG_SECTION_REGISTRY, "enabled", 0);
    }
    else {
        info("Registry is disabled - use the central netdata");
        config_set_boolean(CONFIG_SECTION_REGISTRY, "enabled", 0);
        registry.enabled = 0;
    }


    snprintfz(filename, FILENAME_MAX, "%s/registry", netdata_configured_varlib_dir);
    registry.pathname = config_get(CONFIG_SECTION_REGISTRY, "registry db directory", filename);
    if(mkdir(registry.pathname, 0770) == -1 && errno != EEXIST)
        fatal("Cannot create directory '%s'.", registry.pathname);


    snprintfz(filename, FILENAME_MAX, "%s/netdata.public.unique.id", registry.pathname);
    registry.machine_guid_filename = config_get(CONFIG_SECTION_REGISTRY, "netdata unique id file", filename);

    snprintfz(filename, FILENAME_MAX, "%s/registry.db", registry.pathname);
    registry.db_filename = config_get(CONFIG_SECTION_REGISTRY, "registry db file", filename);

    snprintfz(filename, FILENAME_MAX, "%s/registry-log.db", registry.pathname);
    registry.log_filename = config_get(CONFIG_SECTION_REGISTRY, "registry log file", filename);


    registry.save_registry_every_entries = (unsigned long long)config_get_number(CONFIG_SECTION_REGISTRY, "registry save db every new entries", 1000000);
    registry.persons_expiration = config_get_number(CONFIG_SECTION_REGISTRY, "registry expire idle persons days", 365) * 86400;
    registry.registry_domain = config_get(CONFIG_SECTION_REGISTRY, "registry domain", "");
    registry.registry_to_announce = config_get(CONFIG_SECTION_REGISTRY, "registry to announce", "https://registry.my-netdata.io");
    registry.hostname = config_get(CONFIG_SECTION_REGISTRY, "registry hostname", netdata_configured_hostname);
    registry.verify_cookies_redirects = config_get_boolean(CONFIG_SECTION_REGISTRY, "verify browser cookies support", 1);


    registry.cloud_base_url = config_get(CONFIG_SECTION_CLOUD, "cloud base url", "https://netdata.cloud");

    setenv("NETDATA_REGISTRY_CLOUD_BASE_URL", registry.cloud_base_url, 1);
    setenv("NETDATA_REGISTRY_HOSTNAME", registry.hostname, 1);
    setenv("NETDATA_REGISTRY_URL", registry.registry_to_announce, 1);

    registry.max_url_length = (size_t)config_get_number(CONFIG_SECTION_REGISTRY, "max URL length", 1024);
    if(registry.max_url_length < 10) {
        registry.max_url_length = 10;
        config_set_number(CONFIG_SECTION_REGISTRY, "max URL length", (long long)registry.max_url_length);
    }

    registry.max_name_length = (size_t)config_get_number(CONFIG_SECTION_REGISTRY, "max URL name length", 50);
    if(registry.max_name_length < 10) {
        registry.max_name_length = 10;
        config_set_number(CONFIG_SECTION_REGISTRY, "max URL name length", (long long)registry.max_name_length);
    }


    registry.persons_count = 0;
    registry.machines_count = 0;
    registry.usages_count = 0;
    registry.urls_count = 0;
    registry.persons_urls_count = 0;
    registry.machines_urls_count = 0;


    registry.persons_memory = 0;
    registry.machines_memory = 0;
    registry.urls_memory = 0;
    registry.persons_urls_memory = 0;
    registry.machines_urls_memory = 0;


    netdata_mutex_init(&registry.lock);


    registry.persons = dictionary_create(DICTIONARY_FLAGS);
    registry.machines = dictionary_create(DICTIONARY_FLAGS);
    avl_init(&registry.registry_urls_root_index, registry_url_compare);


    if(registry.enabled) {
        registry_log_open();
        registry_db_load();
        registry_log_load();

        if(unlikely(registry_db_should_be_saved()))
            registry_db_save();
    }

    return 0;
}
